--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -16,24 +16,11 @@
         GetUltimoDocumento();
         ValidarGrid();
         ValidarCliente();
-        //Date picker
-        $('#vt_fecha').datepicker({
-            autoclose: true
-        })
-        $('#fecha_primera_cuota').datepicker({
-            autoclose: true
-        })
-        $('#vt_fech_venc').datepicker({
-            autoclose: true
-        })
         $("#vt_tipo_venta").change(function () {
             get_info_termino_pago();
             CargarCuotas();
         });
         $("#vt_plazo").change(function () {
-            cargar_fecha_vencimiento();
-        });
-        $("#vt_fecha").change(function () {
             cargar_fecha_vencimiento();
         });
         $("#IdSucursal").change(function () {
@@ -42,9 +29,6 @@
         });
         $("#IdPuntoVta").change(function () {
             GetUltimoDocumento();
-        });
-        $("#fecha_primera_cuota").change(function () {
-            CargarCuotas();
         });
         $("#valor_abono").change(function () {
             CargarCuotas();
@@ -283,9 +267,8 @@
 
     function cargar_fecha_vencimiento() {
         var vida = Number($("#vt_plazo").val());
-        var from = $("#vt_fecha").val().split("/")
-        var f = new Date(from[2], from[1] - 1, from[0])
-        $('#vt_fech_venc').datepicker("update", moment(f, "DD-MM-YYYY").add(vida, 'days').format("DD/MM/YYYY"));
+        var date = new Date(moment(vt_fecha.GetValue(), "DD/MM/YYYY").add(vida, 'days'));
+        vt_fech_venc.SetValue(date);
     }
 
         function get_info_termino_pago() {
@@ -411,7 +394,7 @@
 
         function CargarCuotas() {
             var datos = {
-                FechaPrimerPago: $("#fecha_primera_cuota").val(),
+                FechaPrimerPago: fecha_primera_cuota.GetDate(),
                     IdTerminoPago: $("#vt_tipo_venta").val(),
                 ValorPrimerPago: $("#valor_abono").val(),
                 IdTransaccionSession: $("#IdTransaccionSession").val()
@@ -773,7 +756,16 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </div>
-                                    @Html.TextBoxFor(q => q.vt_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "vt_fecha" })
+                                    @Html.DevExpress().DateEditFor(q => q.vt_fecha, settings =>
+                                   {
+                                       settings.Name = "vt_fecha";
+                                       settings.Properties.UseMaskBehavior = true;
+                                       settings.Properties.EditFormat = EditFormat.Date;
+                                       settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                       settings.Properties.ClientSideEvents.DateChanged = "function(s,e){cargar_fecha_vencimiento();}";
+                                   }).GetHtml()                                   
                                     @Html.ValidationMessageFor(q => q.vt_fecha, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -792,7 +784,15 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </div>
-                                    @Html.TextBoxFor(q => q.vt_fech_venc, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "vt_fech_venc" })
+                                    @Html.DevExpress().DateEditFor(q => q.vt_fech_venc, settings =>
+                                   {
+                                       settings.Name = "vt_fech_venc";
+                                       settings.Properties.UseMaskBehavior = true;
+                                       settings.Properties.EditFormat = EditFormat.Date;
+                                       settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                   }).GetHtml()
                                     @Html.ValidationMessageFor(q => q.vt_fech_venc, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -816,7 +816,16 @@
                                         <div class="input-group-addon">
                                             <i class="fa fa-calendar"></i>
                                         </div>
-                                        @Html.TextBoxFor(q => q.fecha_primera_cuota, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_primera_cuota" })
+                                        @Html.DevExpress().DateEditFor(q => q.fecha_primera_cuota, settings =>
+                                  {
+                                      settings.Name = "fecha_primera_cuota";
+                                      settings.Properties.UseMaskBehavior = true;
+                                      settings.Properties.EditFormat = EditFormat.Date;
+                                      settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                      settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                      settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                      settings.Properties.ClientSideEvents.DateChanged = "function(s,e){CargarCuotas();}";
+                                  }).GetHtml()
                                         @Html.ValidationMessageFor(q => q.fecha_primera_cuota, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
