--- a/ERP/Core.Erp.Web/Areas/General/Views/Empresa/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Empresa/Anular.cshtml
@@ -17,8 +17,25 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="codigo">Código*</label>
-                    @Html.TextBoxFor(q => q.codigo, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.codigo, "", new { @class = "text-danger" })
+                    @Html.DevExpress().BinaryImage(
+                    settings =>
+                    {
+                        settings.Name = "pr_imagen";
+                        settings.CallbackRouteValues = new { Controller = "Empresa", Action = "get_imagen" };
+                    }).Bind((Model.em_logo).ToArray()).GetHtml()
+
+
+                    @Html.DevExpress().UploadControl(settings =>
+               {
+
+                   settings.Name = "UploadControl";
+                   settings.CallbackRouteValues = new { Controller = "Producto", Action = "UploadControlUpload" };
+                   settings.ShowUploadButton = true;
+                   settings.ShowProgressPanel = true;
+               }).GetHtml()
+
+
+
                 </div>
             </div>
 
