--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
@@ -100,6 +100,13 @@
                 sp.Width = Unit.Percentage(100);
             });
         });
+        settings.Columns.Add("co_subtotal_iva", "SubIVA").Width = Unit.Percentage(10);
+        settings.Columns.Add("co_valoriva", " IVA").Width = Unit.Percentage(10);
+        settings.Columns.Add("co_subtotal_siniva", " SubSin IVA").Width = Unit.Percentage(10);
+        settings.Columns.Add("co_total", "Total").Width = Unit.Percentage(10);
+
+
+
         settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
