--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_retenciones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_retenciones.cshtml
@@ -82,7 +82,7 @@
         settings.Columns.Add("serie1","Esta").Width = Unit.Percentage(5);
         settings.Columns.Add("serie2","PtoEmi").Width = Unit.Percentage(5);
         settings.Columns.Add("NumRetencion","Retención").Width = Unit.Percentage(15);
-        settings.Columns.Add("pe_razonSocial","Proveedor").Width = Unit.Percentage(30);
+        settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(30);
         settings.Columns.Add("co_serie", "Serie documento").Width = Unit.Percentage(15);
         settings.Columns.Add("co_factura","#documento").Width = Unit.Percentage(10);
 
