--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionComisiones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionComisiones/Nuevo.cshtml
@@ -16,20 +16,14 @@
     @Html.HiddenFor(q => q.IdTransaccionSession, new { id = "IdTransaccionSession" })
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <div class="form-group">
                     <label for="IdVendedor">Vendedor*</label>
-                    @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control" })
+                    @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control", @id = "IdVendedor" })
                     @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-2">
-                <button type="button" class="btn btn-primary" id="btn_buscar_op">
-                    <i class="fa fa-search"></i>
-                </button>
-            </div>
-
-            <div class=" col-md-offset-2 col-md-2 ">
+            <div class="col-md-offset-2 col-md-2">
                 <div class="form-group">
                     <label for="">Fecha*</label>
                     <div class="input-group date">
@@ -63,6 +57,18 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-1">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_buscar_op" onclick="get_list_x_liquidar();">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -83,34 +89,27 @@
 }
 
 <script>
-    function get_list(Secuencia){
+    function get_list_x_liquidar(){
 
-        $("#Secuencia").text(Secuencia);
         var datos = {
-            IdEmpresa: $("#IdEmpresa").val(),
-            IdLiquidacion: $("#IdLiquidacion").val(),
+            IdEmpresa: $("#IdEmpresa").val(),            
             IdTransaccionSession: $("#IdTransaccionSession").val(),
-            Secuencia: Secuencia
+            IdVendedor: $("#IdVendedor").val(),
         }
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("get_list", "LiquidacionComisiones",new { Area = "CuentasPorCobrar"})',
+            url: '@Url.Action("get_list_x_liquidar", "LiquidacionComisiones",new { Area = "CuentasPorCobrar"})',
             async: false,
             bDeferRender: true,
             bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                if (data.IdProducto_padre > 0) {
-                    MostrarModal();
-                }
+                GridView_liquidacion_det.PerformCallback();                
             },
             error: function (error) {
             }
         });
-    }
-    function MostrarModal() {
-        GridView_liquidacion_det.PerformCallback();
     }
 </script>
